--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>BMI Calculator</title>
+    <meta charset="utf-8" />
+    <title>IBM Kalkulátor</title>
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="stylesheet" href="app.components.scss" />
   </head>
   <body>
     <app-root></app-root>
