fix the great git reset disaster

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta charset="utf-8" />
-    <title>IBM Kalkulátor</title>
+    <title>BMI Calculator</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
