--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,13 @@
+<!--
+* File: index.html
+* Author: Sangare F. Felisha
+* Copyright: 2023, Sangare F. Felisha
+* Group: Szoft II N
+* Date: 2023-01-04
+* Github: https://github.com/fe-ktch/
+* Licenc: GNU GPL
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
